# postgres-xl-operator

./: Cargo.toml  Dockerfile  README.md
chart/: Chart.yaml  values.yaml
custom-resource-definitions/: postgres-xl-clusters.yaml
custom-resources/: postgres-xl-cluster.yaml
onload_scripts/: create_update_user_passwords.sh  set_health_check_user_perms.sh
operations/: crd-create.sh  create-modify-postgres-xl-cluster.sh  create-namespace-crd.sh  create-postgres-xl-cluster.sh  delete-postgres-xl-cluster.sh  generate_schema_models.sh  list-postgres-xl-cluster.sh  postgres-xl-cluster-list.sh  postgres-xl-cluster-unlink-standby-promote.sh  run.sh  setup-postgres-xl-cluster.sh
scripts/: check_gtm_connection  check_nodes_connection  check_postgres_is_alive  check_proxy_connection  common.sh  coordinator_entrypoint  data_node_entrypoint  gtm_entrypoint  initialize_env_dependencies  initialize_networks  initialize_node_config  initialize_postgres_db  initialize_standby_coordinator  initialize_standby_datanode  initialize_standby_dn.sh  initialize_standby_gtm  initialize_standby_gtm.sh  job_on_load  methods_recovery  probe_liveness_postgres  probe_readiness_coordinator  probe_readiness_datanode  probe_readiness_proxy  proxy_entrypoint  register_node  test.sh  wait_for_connection  wal_archive
src/: controller_config_map.rs  controller_deployment.rs  controller_job.rs  controller_network_policy.rs  controller_postgres_xl_cluster.rs  controller_postgres_xl_cluster_informer.rs  controller_secret.rs  controller_service.rs  controller_stateful_set.rs  custom_resources.rs  enums.rs  (+10 more)
(+59 files in other folders)
