[package]
name = "postgres-xl-operator"
version = "0.1.0"
authors = ["Stephen Stubbs <stephen.stubbs@vanqor.com>"]
edition = "2018"

[dependencies]
# Async
futures = "0.3.1"
tokio = { version = "0.2.9", features = ["full"] }
# Logging and errors
log = "0.4.8"
env_logger = "0.6"
anyhow = "1.0.26"
# K8s
kube = { version = "0.23.0", features = ["openapi"] }
k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_16"] }
# YAML and JSON parsing
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_yaml = "0.8.11"
json-patch = "0.2.6"
# Go template parsing
gtmpl = { version = "0.5.7", features = ["gtmpl_dynamic_template"] }
gtmpl_derive = "0.3.3"
gtmpl_value = "0.3.3"
sprig = { git = "https://github.com/sstubbs/sprig-rust", branch = "initial_math" }
regex = "1.3.3"
# Embed all resources
rust-embed = { version = "5.2.0", features = ["debug-embed"] }
# Hashing
ring = "0.16.10"
base64 = "0.11.0"
